Implement selector utility for command target resolution and enhance commands to support multiple targets